Opened 9 years ago
Closed 9 years ago
#6644 closed defect (fixed)
HEVC decoding regression
| Reported by: | Carl Eugen Hoyos | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avcodec |
| Version: | git-master | Keywords: | hevc regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | yes |
Description
A user provided another hevc sample that cannot be decoded since 5ec85c97, see #3872, #4035 and #4621.
$ ffmpeg -i \[H265\]\ Goodbye\ Happiness_cut.mkv
ffmpeg version N-87217-g912b6af Copyright (c) 2000-2017 the FFmpeg developers
built with gcc 6.3.0 (GCC)
configuration: --enable-gpl --cc=/usr/local/gcc-6.3.0/bin/gcc
libavutil 55. 74.100 / 55. 74.100
libavcodec 57.105.100 / 57.105.100
libavformat 57. 81.100 / 57. 81.100
libavdevice 57. 8.100 / 57. 8.100
libavfilter 6.102.100 / 6.102.100
libswscale 4. 7.103 / 4. 7.103
libswresample 2. 8.100 / 2. 8.100
libpostproc 54. 6.100 / 54. 6.100
max: 0, markers[max]: 0, sum: 0
[hevc @ 0x36357e0] Overread SPS by 8 bits
[hevc @ 0x36357e0] SPS 0 does not exist.
[hevc @ 0x36357e0] Overread SPS by 8 bits
[hevc @ 0x36357e0] SPS 0 does not exist.
[hevc @ 0x36357e0] PPS id out of range: 0
[hevc @ 0x36357e0] Error parsing NAL unit #3.
[hevc @ 0x36357e0] PPS id out of range: 0
[hevc @ 0x36357e0] Error parsing NAL unit #0.
...
...
[hevc @ 0x36357e0] PPS id out of range: 0
[hevc @ 0x36357e0] Error parsing NAL unit #0.
[matroska,webm @ 0x3632280] decoding for stream 0 failed
[matroska,webm @ 0x3632280] Could not find codec parameters for stream 0 (Video: hevc, none, 1920x1080): unspecified pixel format
Consider increasing the value for the 'analyzeduration' and 'probesize' options
Input #0, matroska,webm, from '[H265] Goodbye Happiness_cut.mkv':
Metadata:
encoder : libebml v1.3.0 + libmatroska v1.4.1
creation_time : 2014-12-12T03:15:30.000000Z
Duration: 00:04:51.19, start: 0.000000, bitrate: 70 kb/s
Stream #0:0: Video: hevc, none, 1920x1080, SAR 1:1 DAR 16:9, 29.97 fps, 29.97 tbr, 1k tbn, 1k tbc (default)
Stream #0:1: Audio: aac (LC), 48000 Hz, stereo, fltp (default)
At least one output file must be specified
Attachments (1)
Change History (3)
by , 9 years ago
| Attachment: | [H265] Goodbye Happiness_cut.mkv added |
|---|
comment:1 by , 9 years ago
| Analyzed by developer: | set |
|---|---|
| Status: | new → open |
comment:2 by , 9 years ago
| Reproduced by developer: | set |
|---|---|
| Resolution: | → fixed |
| Status: | open → closed |
Fixed in c9a1cd08eafe57d1fecaaf605929b3e68165a6e4.
Note:
See TracTickets
for help on using tickets.



Another file with VUI timing info located where default display window should be, apparently like in #4035